[gd_scene load_steps=8 format=2]

[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://Instructions.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=2]
action = "ui_select"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -220.0
margin_bottom = -61.0
custom_fonts/font = SubResource( 1 )
text = "Dodge the Creeps!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -50.0
margin_right = 90.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="OptionsBtn" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -240.0
margin_right = 370.0
margin_bottom = -156.0
custom_fonts/font = SubResource( 1 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="." instance=ExtResource( 3 )]

[node name="InstructionsBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -203.0
margin_top = -84.0
margin_right = 203.0
custom_fonts/font = SubResource( 1 )
text = "Instructions"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="OptionsBtn" to="." method="_on_Options_pressed"]
[connection signal="col_changed" from="Options" to="." method="opt_changed_color"]
[connection signal="opt_saved" from="Options" to="." method="return_to_game"]
[connection signal="speed_changed" from="Options" to="." method="opt_changed_speed"]
[connection signal="pressed" from="InstructionsBtn" to="." method="_on_InstructionsBtn_pressed"]
[connection signal="return_to_game" from="Instructions" to="." method="return_to_game"]
